@@ -1,4 +1,4 @@
-# $Id: TestEm4.in,v 1.1 2000-01-21 13:53:25 maire Exp $
+# $Id: TestEm4.in,v 1.2 2001-11-28 15:07:21 maire Exp $
 #
 # Macro file for "TestEm4.cc"
 # 
@@ -6,11 +6,7 @@
 #
 /control/verbose  2
 #
-#/run/particle/setCut 1.0 mm
-#/run/initialize
-#
 /run/verbose 2
-/event/drawTracks none
 /event/printModulo 10000
 #
 /run/beamOn 50000
