@@ -1,4 +1,4 @@
-# $Id: run01.mac,v 1.3 2001-10-26 11:08:58 maire Exp $
+# $Id: run01.mac,v 1.4 2001-11-28 15:07:22 maire Exp $
 #
 # Macro file for "TestEm4.cc"
 # 
@@ -10,6 +10,6 @@
 #/run/initialize
 #
 /run/verbose 2
-/event/printModulo 1000
+/event/printModulo 10000
 #
 /run/beamOn 100000
