@@ -19,10 +19,11 @@
 #
 # Draw scene
 /vis/viewer/zoom 1.5
+/vis/viewer/flush
 #
 # for drawing the tracks
 # if too many tracks cause core dump => storeTrajectory 0
 /tracking/storeTrajectory 1
 /vis/scene/endOfEventAction accumulate
 #
-/event/drawTracks all
+/event/drawTracks 
