@@ -1,4 +1,4 @@
-$Id: History,v 1.13 2001-10-26 11:08:58 maire Exp $
+$Id: History,v 1.14 2001-11-28 15:07:21 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,12 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+28-11-01  mma (testem4-V03-02-02) 
+- EventAction: DrawTrack "none"
+- small change in vis.mac
+- suppression of the rndm commands, now managed by G4RunManager: 
+  --> RunAction, EventAction. suppression of RunActionMessenger
 
 26-10-01  mma (testem4-V03-02-01) 
 - init.mac renamed vis.mac
